added a main element and styled the header and nav

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+  margin: 0;
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   color: #777;
   background: #777;
@@ -8,6 +9,7 @@ body{
 
 header, nav, select, aside, footer {
   background-color: #ebebeb;
+  padding: 10px;
 }
 
 article{
@@ -22,4 +24,13 @@ h1, p{
 
 section{
   width: 495px;
+}
+
+header{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+nav{
+  margin-bottom: 15px;
 }
